RHINENG-9436 enable sorting for GET v2/profiles on created_at field
